Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27970

Mouse pointer stays as splitter cursor after moving over and out of QDockWidget splitter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0 RC 1
    • 5.0.0
    • None
    • Qt5
      Windows 7 64 bit
      compiled with msvc2010.
      Tested debug x86, release x86, debug x64 and release x64 all version exhibit this bug.
    • 90de0c417883aa515a694fa56b0e84c8969971fe

    Description

      When creating a simple layout of a QDockWidget and a QFrame moving the mouse over the QDockWidgets' horizontal splitter the cursor continues to be the horizontal splitter icon even outside of the splitter window.

      Qt5 built from Git: Ia6254526d84f43ad810e364fb3af1837c30f3da1
      (11/7/2012)

      Attached is simple project to reproduce bug. Note please ignore misleading filenames in zip. It's a QDockWidget related bug.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            altera_2011 ron
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes